--- a/2017 Scouting Collection/2017 Scouting Collection/Base.lproj/Main.storyboard
+++ b/2017 Scouting Collection/2017 Scouting Collection/Base.lproj/Main.storyboard
@@ -103,15 +103,15 @@
             </objects>
             <point key="canvasLocation" x="33.984375" y="39.84375"/>
         </scene>
-        <!--View Controller-->
+        <!--Prematch View Controller-->
         <scene sceneID="Unx-7e-W81">
             <objects>
-                <viewController id="9RX-dD-odt" sceneMemberID="viewController">
+                <viewController id="9RX-dD-odt" customClass="PrematchViewController" customModule="_017_Scouting_Collection" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="NMw-Ae-fhG"/>
                         <viewControllerLayoutGuide type="bottom" id="DUB-c3-Jeg"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="VVD-2A-aIP">
+                    <view key="view" contentMode="scaleToFill" id="VVD-2A-aIP" customClass="UIScrollView">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -121,6 +121,7 @@
                                     <attributedString key="attributedTitle">
                                         <fragment content="Cancel">
                                             <attributes>
+                                                <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <font key="NSFont" metaFont="system" size="30"/>
                                                 <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                             </attributes>
@@ -132,82 +133,94 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oxz-9k-hza">
-                                <rect key="frame" x="42" y="150" width="170" height="47"/>
+                                <rect key="frame" x="42" y="174" width="170" height="47"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="35"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scouted Team Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YfD-dZ-TS9">
-                                <rect key="frame" x="42" y="247" width="355.5" height="42"/>
+                                <rect key="frame" x="42" y="271" width="355.5" height="42"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="35"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Match Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CKu-47-5Tq">
-                                <rect key="frame" x="42" y="339" width="182" height="42"/>
+                                <rect key="frame" x="42" y="363" width="182" height="42"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="35"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Match Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g6K-z9-bUG">
-                                <rect key="frame" x="42" y="431" width="230.5" height="42"/>
+                                <rect key="frame" x="42" y="455" width="230.5" height="42"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="35"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ueB-p0-gTf">
-                                <rect key="frame" x="412" y="244.5" width="570" height="47"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="ueB-p0-gTf">
+                                <rect key="frame" x="412" y="268.5" width="570" height="47"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="35"/>
-                                <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gYR-ZQ-fcw">
-                                <rect key="frame" x="412" y="428.5" width="570" height="47"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="gYR-ZQ-fcw">
+                                <rect key="frame" x="412" y="452.5" width="570" height="47"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
                             <segmentedControl opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="mnd-6P-bHq">
-                                <rect key="frame" x="412" y="336.5" width="570" height="48"/>
+                                <rect key="frame" x="412" y="360.5" width="570" height="48"/>
                                 <segments>
                                     <segment title="QUALIFIER"/>
                                     <segment title="QUARTERFINAL"/>
                                     <segment title="SEMIFINAL"/>
                                     <segment title="FINAL"/>
                                 </segments>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </segmentedControl>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JMr-mR-r8C">
                                 <rect key="frame" x="12" y="631" width="1000" height="125"/>
-                                <color key="backgroundColor" red="0.91798898963730569" green="0.91798898963730569" blue="0.91798898963730569" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="125" id="Ri2-yr-6tJ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                <state key="normal" title="Start"/>
+                                <state key="normal" title="Start">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vdq-Al-Yom">
-                                <rect key="frame" x="412" y="150" width="570" height="47"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="Vdq-Al-Yom">
+                                <rect key="frame" x="412" y="174" width="570" height="47"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CHf-80-rrS">
+                                <rect key="frame" x="415.5" y="50" width="193.5" height="84"/>
+                                <fontDescription key="fontDescription" name="Lato-Light" family="Lato" pointSize="72"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.04191788338" green="0.6047603627" blue="0.017816367989999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="mnd-6P-bHq" firstAttribute="leading" secondItem="Vdq-Al-Yom" secondAttribute="leading" id="3D6-XL-QI4"/>
                             <constraint firstItem="mnd-6P-bHq" firstAttribute="height" secondItem="Vdq-Al-Yom" secondAttribute="height" id="476-hs-Tpi"/>
                             <constraint firstItem="oxz-9k-hza" firstAttribute="leadingMargin" secondItem="VVD-2A-aIP" secondAttribute="leadingMargin" constant="30" id="7FM-tu-7U7"/>
                             <constraint firstItem="YfD-dZ-TS9" firstAttribute="leading" secondItem="oxz-9k-hza" secondAttribute="leading" id="Aei-AA-dho"/>
                             <constraint firstItem="ueB-p0-gTf" firstAttribute="trailing" secondItem="Vdq-Al-Yom" secondAttribute="trailing" id="Awq-K0-hxE"/>
+                            <constraint firstItem="oxz-9k-hza" firstAttribute="top" secondItem="CHf-80-rrS" secondAttribute="bottom" constant="40" id="B4x-O7-ArY"/>
                             <constraint firstItem="mnd-6P-bHq" firstAttribute="trailing" secondItem="Vdq-Al-Yom" secondAttribute="trailing" id="C7m-wy-F6n"/>
                             <constraint firstItem="w3O-Ul-Mt0" firstAttribute="topMargin" secondItem="VVD-2A-aIP" secondAttribute="topMargin" constant="30" id="CzZ-Oh-fZp"/>
                             <constraint firstItem="YfD-dZ-TS9" firstAttribute="top" secondItem="oxz-9k-hza" secondAttribute="bottom" constant="50" id="GXg-yB-v6Y"/>
                             <constraint firstItem="ueB-p0-gTf" firstAttribute="leading" secondItem="Vdq-Al-Yom" secondAttribute="leading" id="HJV-7b-7xi"/>
                             <constraint firstAttribute="bottomMargin" secondItem="JMr-mR-r8C" secondAttribute="bottomMargin" constant="20" id="MOd-z4-l2x"/>
                             <constraint firstItem="Vdq-Al-Yom" firstAttribute="centerY" secondItem="oxz-9k-hza" secondAttribute="centerY" id="NPt-QF-3Sa"/>
+                            <constraint firstItem="CHf-80-rrS" firstAttribute="centerX" secondItem="VVD-2A-aIP" secondAttribute="centerX" id="OEb-ak-vpp"/>
                             <constraint firstItem="mnd-6P-bHq" firstAttribute="centerY" secondItem="CKu-47-5Tq" secondAttribute="centerY" id="PKf-4K-CGM"/>
                             <constraint firstItem="gYR-ZQ-fcw" firstAttribute="trailing" secondItem="Vdq-Al-Yom" secondAttribute="trailing" id="QxR-le-8VD"/>
-                            <constraint firstItem="oxz-9k-hza" firstAttribute="top" secondItem="VVD-2A-aIP" secondAttribute="top" constant="150" id="SM3-oR-ABY"/>
                             <constraint firstItem="gYR-ZQ-fcw" firstAttribute="leading" secondItem="Vdq-Al-Yom" secondAttribute="leading" id="VC5-ga-0cz"/>
                             <constraint firstItem="CKu-47-5Tq" firstAttribute="top" secondItem="YfD-dZ-TS9" secondAttribute="bottom" constant="50" id="Wm4-A2-Q0e"/>
                             <constraint firstItem="JMr-mR-r8C" firstAttribute="leadingMargin" secondItem="VVD-2A-aIP" secondAttribute="leadingMargin" id="XXN-Fc-B1Q"/>
@@ -218,6 +231,7 @@
                             <constraint firstItem="gYR-ZQ-fcw" firstAttribute="centerY" secondItem="g6K-z9-bUG" secondAttribute="centerY" id="hg3-bv-ACI"/>
                             <constraint firstItem="Vdq-Al-Yom" firstAttribute="height" secondItem="oxz-9k-hza" secondAttribute="height" id="iG9-YK-Grh"/>
                             <constraint firstItem="w3O-Ul-Mt0" firstAttribute="leadingMargin" secondItem="VVD-2A-aIP" secondAttribute="leadingMargin" id="kLk-Ke-ALa"/>
+                            <constraint firstItem="CHf-80-rrS" firstAttribute="top" secondItem="NMw-Ae-fhG" secondAttribute="bottom" constant="30" id="kf7-ff-4nr"/>
                             <constraint firstItem="Vdq-Al-Yom" firstAttribute="leadingMargin" secondItem="VVD-2A-aIP" secondAttribute="leadingMargin" constant="400" id="lgU-bd-hpW"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Vdq-Al-Yom" secondAttribute="trailingMargin" constant="30" id="mYF-wn-PTn"/>
                             <constraint firstAttribute="trailingMargin" secondItem="JMr-mR-r8C" secondAttribute="trailingMargin" id="q5S-wU-rWm"/>
@@ -225,6 +239,11 @@
                             <constraint firstItem="ueB-p0-gTf" firstAttribute="height" secondItem="Vdq-Al-Yom" secondAttribute="height" id="vVN-bA-uve"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="activeField" destination="gYR-ZQ-fcw" id="3y1-c2-nSn"/>
+                        <outlet property="scrollView" destination="VVD-2A-aIP" id="XWW-cY-cRT"/>
+                        <outlet property="startButton" destination="JMr-mR-r8C" id="BIe-tR-NkW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Lb-KD-FDa" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="hh0-KN-uQ1" userLabel="Exit" sceneMemberID="exit"/>
